Fixed bugs and updated database context and services.

--- a/GeneticAlgNetControl/Pages/Details.cshtml
+++ b/GeneticAlgNetControl/Pages/Details.cshtml
@@ -355,76 +355,76 @@
     <div class="offset-1 col-11">
         <div class="row">
             <div class="col-lg-4 order-1 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.RandomSeed" class="font-weight-bold">Random seed</label>
+                <label asp-for="View.Algorithm.Parameters.RandomSeed" class="font-weight-bold">Random seed</label>
             </div>
             <div class="col-lg-4 order-1 order-lg-2 mb-3">
-                <input asp-for="View.Algorithm.RandomSeed" class="form-control form-control-plaintext" disabled />
+                <input asp-for="View.Algorithm.Parameters.RandomSeed" class="form-control form-control-plaintext" disabled />
             </div>
             <div class="col-lg-4 order-2 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.MaximumIterations" class="font-weight-bold">Maximum iterations</label>
+                <label asp-for="View.Algorithm.Parameters.MaximumIterations" class="font-weight-bold">Maximum iterations</label>
             </div>
             <div class="col-lg-4 order-2 order-lg-2 mb-3">
-                <input asp-for="View.Algorithm.MaximumIterations" class="form-control form-control-plaintext" disabled />
+                <input asp-for="View.Algorithm.Parameters.MaximumIterations" class="form-control form-control-plaintext" disabled />
             </div>
             <div class="col-lg-4 order-3 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.MaximumIterationsWithoutImprovement" class="font-weight-bold">Maximum iterations without improvement</label>
+                <label asp-for="View.Algorithm.Parameters.MaximumIterationsWithoutImprovement" class="font-weight-bold">Maximum iterations without improvement</label>
             </div>
             <div class="col-lg-4 order-3 order-lg-2 mb-3">
-                <input asp-for="View.Algorithm.MaximumIterationsWithoutImprovement" class="form-control form-control-plaintext" disabled />
+                <input asp-for="View.Algorithm.Parameters.MaximumIterationsWithoutImprovement" class="form-control form-control-plaintext" disabled />
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4 order-1 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.MaximumPathLength" class="font-weight-bold">Maximum path length</label>
+                <label asp-for="View.Algorithm.Parameters.MaximumPathLength" class="font-weight-bold">Maximum path length</label>
             </div>
             <div class="col-lg-4 order-1 order-lg-2 mb-3">
-                <input asp-for="View.Algorithm.MaximumPathLength" class="form-control form-control-plaintext" disabled />
+                <input asp-for="View.Algorithm.Parameters.MaximumPathLength" class="form-control form-control-plaintext" disabled />
             </div>
             <div class="col-lg-4 order-2 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.PopulationSize" class="font-weight-bold">Population size</label>
+                <label asp-for="View.Algorithm.Parameters.PopulationSize" class="font-weight-bold">Population size</label>
             </div>
             <div class="col-lg-4 order-2 order-lg-2 mb-3">
-                <input asp-for="View.Algorithm.PopulationSize" class="form-control form-control-plaintext" disabled />
+                <input asp-for="View.Algorithm.Parameters.PopulationSize" class="form-control form-control-plaintext" disabled />
             </div>
             <div class="col-lg-4 order-3 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.RandomGenesPerChromosome" class="font-weight-bold">Random genes per chromosome</label>
+                <label asp-for="View.Algorithm.Parameters.RandomGenesPerChromosome" class="font-weight-bold">Random genes per chromosome</label>
             </div>
             <div class="col-lg-4 order-3 order-lg-2 mb-3">
-                <input asp-for="View.Algorithm.RandomGenesPerChromosome" class="form-control form-control-plaintext" disabled />
+                <input asp-for="View.Algorithm.Parameters.RandomGenesPerChromosome" class="form-control form-control-plaintext" disabled />
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4 order-1 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.PercentageRandom" class="font-weight-bold">Percentage of random chromosomes</label>
+                <label asp-for="View.Algorithm.Parameters.PercentageRandom" class="font-weight-bold">Percentage of random chromosomes</label>
             </div>
             <div class="col-lg-4 order-1 order-lg-2 mb-3">
-                <input asp-for="View.Algorithm.PercentageRandom" class="form-control form-control-plaintext" disabled />
+                <input asp-for="View.Algorithm.Parameters.PercentageRandom" class="form-control form-control-plaintext" disabled />
             </div>
             <div class="col-lg-4 order-2 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.PercentageElite" class="font-weight-bold">Percentage of elite chromosomes</label>
+                <label asp-for="View.Algorithm.Parameters.PercentageElite" class="font-weight-bold">Percentage of elite chromosomes</label>
             </div>
             <div class="col-lg-4 order-2 order-lg-2 mb-3">
-                <input asp-for="View.Algorithm.PercentageElite" class="form-control form-control-plaintext" disabled />
+                <input asp-for="View.Algorithm.Parameters.PercentageElite" class="form-control form-control-plaintext" disabled />
             </div>
             <div class="col-lg-4 order-3 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.ProbabilityMutation" class="font-weight-bold">Probability of mutation</label>
+                <label asp-for="View.Algorithm.Parameters.ProbabilityMutation" class="font-weight-bold">Probability of mutation</label>
             </div>
             <div class="col-lg-4 order-3 order-lg-2 mb-3">
-                <input asp-for="View.Algorithm.ProbabilityMutation" class="form-control form-control-plaintext" disabled />
+                <input asp-for="View.Algorithm.Parameters.ProbabilityMutation" class="form-control form-control-plaintext" disabled />
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6 order-1 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.CrossoverType" class="font-weight-bold">Crossover type</label>
+                <label asp-for="View.Algorithm.Parameters.CrossoverType" class="font-weight-bold">Crossover type</label>
             </div>
             <div class="col-lg-6 order-1 order-lg-2 mb-3">
-                <select asp-for="View.Algorithm.CrossoverType" asp-items="Html.GetEnumSelectList<Data.Enumerations.AlgorithmCrossoverType>()" class="form-control form-control-plaintext" disabled></select>
+                <select asp-for="View.Algorithm.Parameters.CrossoverType" asp-items="Html.GetEnumSelectList<Data.Enumerations.AlgorithmCrossoverType>()" class="form-control form-control-plaintext" disabled></select>
             </div>
             <div class="col-lg-6 order-2 order-lg-1 align-self-center">
-                <label asp-for="View.Algorithm.MutationType" class="font-weight-bold">Mutation type</label>
+                <label asp-for="View.Algorithm.Parameters.MutationType" class="font-weight-bold">Mutation type</label>
             </div>
             <div class="col-lg-6 order-2 order-lg-2 mb-3">
-                <select asp-for="View.Algorithm.MutationType" asp-items="Html.GetEnumSelectList<Data.Enumerations.AlgorithmMutationType>()" class="form-control form-control-plaintext" disabled></select>
+                <select asp-for="View.Algorithm.Parameters.MutationType" asp-items="Html.GetEnumSelectList<Data.Enumerations.AlgorithmMutationType>()" class="form-control form-control-plaintext" disabled></select>
             </div>
         </div>
     </div>
