--- a/GeneticAlgNetControl/Pages/Create.cshtml
+++ b/GeneticAlgNetControl/Pages/Create.cshtml
@@ -180,7 +180,7 @@
                     <label asp-for="Input.RandomSeed" class="font-weight-bold">Random seed</label>
                 </div>
                 <div class="col-lg-4 order-1 order-lg-2">
-                    <input asp-for="Input.RandomSeed" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.RandomSeed" />
+                    <input asp-for="Input.RandomSeed" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.RandomSeed" />
                 </div>
                 <div class="col-lg-4 order-1 order-lg-3 mb-3">
                     <span asp-description-for="Input.RandomSeed" class="text-muted small">The random seed to be used by the algorithm.</span>
@@ -190,7 +190,7 @@
                     <label asp-for="Input.MaximumIterations" class="font-weight-bold">Maximum iterations</label>
                 </div>
                 <div class="col-lg-4 order-2 order-lg-2">
-                    <input asp-for="Input.MaximumIterations" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.MaximumIterations" />
+                    <input asp-for="Input.MaximumIterations" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.MaximumIterations" />
                 </div>
                 <div class="col-lg-4 order-2 order-lg-3 mb-3">
                     <span asp-description-for="Input.MaximumIterations" class="text-muted small">The maximum number of generations for which the algorithm will run.</span>
@@ -200,7 +200,7 @@
                     <label asp-for="Input.MaximumIterationsWithoutImprovement" class="font-weight-bold">Maximum iterations without improvement</label>
                 </div>
                 <div class="col-lg-4 order-3 order-lg-2">
-                    <input asp-for="Input.MaximumIterationsWithoutImprovement" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.MaximumIterationsWithoutImprovement" />
+                    <input asp-for="Input.MaximumIterationsWithoutImprovement" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.MaximumIterationsWithoutImprovement" />
                 </div>
                 <div class="col-lg-4 order-3 order-lg-3 mb-3">
                     <span asp-description-for="Input.MaximumIterationsWithoutImprovement" class="text-muted small">The maximum number of generations without improvement in the size of the best solutions before the algorithm will stop.</span>
@@ -216,7 +216,7 @@
                     <label asp-for="Input.MaximumPathLength" class="font-weight-bold">Maximum path length</label>
                 </div>
                 <div class="col-lg-4 order-1 order-lg-2">
-                    <input asp-for="Input.MaximumPathLength" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.MaximumPathLength" />
+                    <input asp-for="Input.MaximumPathLength" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.MaximumPathLength" />
                 </div>
                 <div class="col-lg-4 order-1 order-lg-3 mb-3">
                     <span asp-description-for="Input.MaximumPathLength" class="text-muted small">The maximum length of a control path (between a target node and the node which controls it).</span>
@@ -226,7 +226,7 @@
                     <label asp-for="Input.PopulationSize" class="font-weight-bold">Population size</label>
                 </div>
                 <div class="col-lg-4 order-2 order-lg-2">
-                    <input asp-for="Input.PopulationSize" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.PopulationSize" />
+                    <input asp-for="Input.PopulationSize" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.PopulationSize" />
                 </div>
                 <div class="col-lg-4 order-2 order-lg-3 mb-3">
                     <span asp-description-for="Input.PopulationSize" class="text-muted small">The number of chromosomes in each generation.</span>
@@ -236,7 +236,7 @@
                     <label asp-for="Input.RandomGenesPerChromosome" class="font-weight-bold">Random genes per chromosome</label>
                 </div>
                 <div class="col-lg-4 order-3 order-lg-2">
-                    <input asp-for="Input.RandomGenesPerChromosome" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.RandomGenesPerChromosome" />
+                    <input asp-for="Input.RandomGenesPerChromosome" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.RandomGenesPerChromosome" />
                 </div>
                 <div class="col-lg-4 order-3 order-lg-3 mb-3">
                     <span asp-description-for="Input.RandomGenesPerChromosome" class="text-muted small">The maximum number of genes in a randomly generated chromosome that will have a randomly generated value. All of the other genes will have a default value.</span>
@@ -252,7 +252,7 @@
                     <label asp-for="Input.PercentageRandom" class="font-weight-bold">Percentage of random chromosomes</label>
                 </div>
                 <div class="col-lg-4 order-1 order-lg-2">
-                    <input asp-for="Input.PercentageRandom" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.PercentageRandom" />
+                    <input asp-for="Input.PercentageRandom" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.PercentageRandom" />
                 </div>
                 <div class="col-lg-4 order-1 order-lg-3 mb-3">
                     <span asp-description-for="Input.PercentageRandom" class="text-muted small">The percentage of randomly generated chromosomes in any population.</span>
@@ -262,7 +262,7 @@
                     <label asp-for="Input.PercentageElite" class="font-weight-bold">Percentage of elite chromosomes</label>
                 </div>
                 <div class="col-lg-4 order-2 order-lg-2">
-                    <input asp-for="Input.PercentageElite" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.PercentageElite" />
+                    <input asp-for="Input.PercentageElite" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.PercentageElite" />
                 </div>
                 <div class="col-lg-4 order-2 order-lg-3 mb-3">
                     <span asp-description-for="Input.PercentageElite" class="text-muted small">The maximum percentage of elite chromosomes saved directly from one generation to the next.</span>
@@ -272,7 +272,7 @@
                     <label asp-for="Input.ProbabilityMutation" class="font-weight-bold">Probability of mutation</label>
                 </div>
                 <div class="col-lg-4 order-3 order-lg-2">
-                    <input asp-for="Input.ProbabilityMutation" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.ProbabilityMutation" />
+                    <input asp-for="Input.ProbabilityMutation" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.ProbabilityMutation" />
                 </div>
                 <div class="col-lg-4 order-3 order-lg-3 mb-3">
                     <span asp-description-for="Input.ProbabilityMutation" class="text-muted small">The probability for any new generated chromosome to suffer a mutation.</span>
@@ -288,7 +288,7 @@
                     <label asp-for="Input.CrossoverType" class="font-weight-bold">Crossover type</label>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2">
-                    <select asp-for="Input.CrossoverType" asp-items="Html.GetEnumSelectList<Data.Enumerations.AlgorithmCrossoverType>()" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.CrossoverType"></select>
+                    <select asp-for="Input.CrossoverType" asp-items="Html.GetEnumSelectList<Data.Enumerations.AlgorithmCrossoverType>()" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.CrossoverType"></select>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-3 mb-3">
                     <span asp-description-for="Input.CrossoverType" class="text-muted small">The crossover algorithm which will be used.</span>
@@ -298,7 +298,7 @@
                     <label asp-for="Input.MutationType" class="font-weight-bold">Mutation type</label>
                 </div>
                 <div class="col-lg-6 order-2 order-lg-2">
-                    <select asp-for="Input.MutationType" asp-items="Html.GetEnumSelectList<Data.Enumerations.AlgorithmMutationType>()" class="form-control parameter-group-parameter" data-defaultValue="@CreateModel.InputModel.DefaultValues.MutationType"></select>
+                    <select asp-for="Input.MutationType" asp-items="Html.GetEnumSelectList<Data.Enumerations.AlgorithmMutationType>()" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.MutationType"></select>
                 </div>
                 <div class="col-lg-6 order-2 order-lg-3 mb-3">
                     <span asp-description-for="Input.MutationType" class="text-muted small">The mutation algorithm which will be used.</span>
