Updated the CLI algorithm run.

--- a/GeneticAlgNetControl/Pages/Details.cshtml
+++ b/GeneticAlgNetControl/Pages/Details.cshtml
@@ -131,7 +131,7 @@
     <hr />
     <div class="row">
         <div class="offset-1 col-11">
-            @foreach (var solution in Model.View.Algorithm.Population.GetSolutions())
+            @*@foreach (var solution in Model.View.Algorithm.Population.GetSolutions())
             {
                 var fitness = solution.GetFitness();
                 var controlNodes = solution.GetUniqueControlNodes();
@@ -183,7 +183,7 @@
                         </div>
                     </div>
                 </div>
-            }
+            }*@
         </div>
     </div>
 }
