Started updating the UI.

--- a/GeneticAlgNetControl/Pages/Index.cshtml
+++ b/GeneticAlgNetControl/Pages/Index.cshtml
@@ -5,17 +5,26 @@
     ViewData["ActivePage"] = "Home";
 }
 
-<div class="h-100 d-flex flex-column justify-content-center">
-    <div class="row">
-        <div class="col-lg-4 d-flex flex-column justify-content-center align-items-center align-items-lg-end">
-            <img src="~/img/geneticalgnetcontrol-icon.png" alt="Logo" />
-        </div>
-        <div class="col-lg-8 d-flex flex-column justify-content-center align-items-center align-items-lg-start">
-            <div class="h2 font-weight-bold">
-                <span><span class="text-danger">Genetic Alg</span>orithms</span>
-            </div>
-            <div class="h2 font-weight-bold">
-                <span>for <span class="text-danger">Net</span>work <span class="text-danger">Control</span>lability</span>
+<div class="flex-grow-1 d-flex flex-column justify-content-center">
+    <div class="container">
+        <div class="card p-5 m-2">
+            <div class="row">
+                <div class="col-lg-4 d-flex flex-column justify-content-center align-items-center my-4 my-lg-0">
+                    <img src="~/img/geneticalgnetcontrol-icon.png" alt="Logo" class="rounded-circle bg-light" />
+                </div>
+                <div class="col-lg-8 d-flex flex-column justify-content-center align-items-center align-items-lg-start my-4 my-lg-0">
+                    <div class="h4 text-center text-lg-left mb-4">
+                        <span>Genetic Algorithms for Network Controllability</span>
+                    </div>
+                    <div class="text-center text-lg-left mb-4">
+                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span>
+                    </div>
+                    <div class="text-center">
+                        <a asp-page="/About" class="btn btn-success">
+                            <span>Find out more</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
