--- a/GeneticAlgNetControl/Pages/Index.cshtml
+++ b/GeneticAlgNetControl/Pages/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="card p-5 m-2">
             <div class="row">
                 <div class="col-lg-4 d-flex flex-column justify-content-center align-items-center my-4 my-lg-0">
-                    <img src="~/img/geneticalgnetcontrol-icon.png" alt="Logo" class="rounded-circle bg-light" />
+                    <img src="~/img/geneticalgnetcontrol-icon.png" alt="Logo" class="border rounded-circle" />
                 </div>
                 <div class="col-lg-8 d-flex flex-column justify-content-center align-items-center align-items-lg-start my-4 my-lg-0">
                     <div class="h4 text-center text-lg-left mb-4">
