--- a/GeneticAlgNetControl/Pages/_Layout.cshtml
+++ b/GeneticAlgNetControl/Pages/_Layout.cshtml
@@ -26,7 +26,7 @@
                         }
                         <span class="font-weight-bold navbar-text text-muted">Overview</span>
                         <a asp-page="/Index" class="nav-item nav-link d-flex flex-row @(activePage == "Home" ? "active" : string.Empty)">
-                            <span class="col-2 text-center text-primary"><i class="fas fa-home"></i></span>
+                            <span class="col-2 text-center text-dark"><i class="fas fa-home"></i></span>
                             <span class="col-10">Home</span>
                         </a>
                         <a asp-page="/Dashboard" class="nav-item nav-link d-flex flex-row @(activePage == "Dashboard" ? "active" : string.Empty)">
