--- a/GeneticAlgNetControl/Pages/Error.cshtml
+++ b/GeneticAlgNetControl/Pages/Error.cshtml
@@ -5,10 +5,29 @@
     ViewData["ActivePage"] = "Error";
 }
 
-<div class="h4 text-danger my-4">
-    <span><i class="fas fa-exclamation-triangle"></i></span>
-    <span>Something went wrong...</span>
-</div>
-<div class="my-4">
-    <span>An error occured while processing your request. You can simply return to the home page and try again, or, if you think that something went wrong when it shouldn't have, you can tell us about it.</span>
+<div class="flex-grow-1 d-flex flex-column justify-content-center">
+    <div class="container">
+        <div class="card p-5 m-2">
+            <div class="row">
+                <div class="col-lg-4 d-flex flex-column justify-content-center align-items-center my-4 my-lg-0">
+                    <div class="border rounded-circle p-5">
+                        <span class="text-danger"><i class="fas fa-exclamation-triangle fa-5x"></i></span>
+                    </div>
+                </div>
+                <div class="col-lg-8 d-flex flex-column justify-content-center align-items-center align-items-lg-start my-4 my-lg-0">
+                    <div class="h4 text-center text-lg-left mb-4">
+                        <span>Something went wrong...</span>
+                    </div>
+                    <div class="text-center text-lg-left mb-4">
+                        <span>An error occured while processing your request. You can simply return to the home page and try again, or, if you think that something went wrong when it shouldn't have, you can tell us about it.</span>
+                    </div>
+                    <div class="text-center">
+                        <a asp-page="/Index" class="btn btn-outline-danger">
+                            <span>Home</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
