Fixed small inconsistencies.

--- a/GeneticAlgNetControl/Pages/About.cshtml
+++ b/GeneticAlgNetControl/Pages/About.cshtml
@@ -7,13 +7,13 @@
 
 <div class="flex-grow-1 p-4 d-flex flex-column">
     <div class="container my-2 sticky-top">
-        <div class="card px-5 shadow-sm">
+        <div class="card px-5 pt-3 pt-md-0 shadow-sm">
             <div class="row align-items-center">
-                <div class="col-md-6 font-weight-bold">
-                    <span>About</span>
+                <div class="col-md-6 text-center text-md-left">
+                    <span class="font-weight-bold">About</span>
                 </div>
                 <div class="col-md-6 navbar navbar-light">
-                    <div class="navbar-nav flex-row flex-wrap align-items-center justify-content-end w-100">
+                    <div class="navbar-nav flex-row flex-wrap align-items-center justify-content-center justify-content-md-end w-100">
                         <a asp-page="/Index" class="nav-item nav-link mx-2" title="Home">
                             <span><i class="fas fa-home"></i></span>
                         </a>
@@ -22,7 +22,7 @@
             </div>
         </div>
     </div>
-    <div class="container my-2 flex-grow-1">
+    <div class="container my-2">
         <div class="card px-5 py-4">
             <p>
                 <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie vel tellus sit amet imperdiet. Sed laoreet, nisi sit amet ullamcorper sodales, nisi purus pellentesque eros, eu maximus mauris nisi eu lacus. Curabitur blandit egestas ornare. Pellentesque lacus diam, ullamcorper a lacinia a, consectetur vel magna. Proin imperdiet leo sed ante tempus, vitae molestie quam euismod. Donec at massa eu mi euismod maximus at vitae sapien. Vestibulum nec erat nulla. In sit amet malesuada ex, eget congue justo. Morbi convallis, massa nec feugiat vulputate, nisl elit semper dui, ac egestas ligula urna quis lacus. Nulla posuere purus quis pellentesque iaculis. Sed in diam sed quam interdum tincidunt hendrerit ac diam. Fusce tempus risus non dapibus gravida. Integer commodo ante sit amet aliquet ultrices.</span>
