--- a/GeneticAlgNetControl/Pages/Create.cshtml
+++ b/GeneticAlgNetControl/Pages/Create.cshtml
@@ -7,7 +7,7 @@
 
 <div class="flex-grow-1 p-4 d-flex flex-column">
     <div class="container my-2 sticky-top">
-        <div class="card px-5 pt-3 py-md-0 shadow-sm">
+        <div class="card px-5 pt-3 pt-md-0 shadow-sm">
             <div class="row align-items-center">
                 <div class="col-md-6 text-center text-md-left">
                     <span class="font-weight-bold">Create</span>
